<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.weekendinc.jet.fragments.RegisterFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        android:text="@string/register"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:inputType="text"
            android:hint="@string/register_name"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_username_white"
            android:drawableStart="@drawable/ic_username_white"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_username_white"
            android:drawableStart="@drawable/ic_username_white"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/register_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawableStart="@drawable/ic_password_white"
            android:drawablePadding="21dp"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/register_repeat_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawableStart="@drawable/ic_password_white"
            android:drawablePadding="21dp"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:background="@drawable/custom_bg_rounded_square_red_fill_shadow"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/large"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/register_already_have_an_account"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/extra_small"
            android:layout_marginStart="@dimen/extra_small"
            android:textColor="@android:color/white"
            android:text="@string/register_login_now"/>
    </LinearLayout>
</LinearLayout>
