<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.weekendinc.jet.fragments.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_username_white"
            android:drawableStart="@drawable/ic_username_white"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/login_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawableStart="@drawable/ic_password_white"
            android:drawablePadding="21dp"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/login_forgot_your_login_details"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:background="@drawable/custom_bg_rounded_square_red_fill_shadow"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium">
        <coid.customer.pickupondemand.jet.custom.CenteredIconButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_rounded_square_light_transparent_white_bordered"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawableStart="@drawable/ic_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:visibility="invisible"/>
        <View
            android:layout_width="@dimen/extra_small"
            android:layout_height="0dp"/>
        <coid.customer.pickupondemand.jet.custom.CenteredIconButton
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_rounded_square_light_transparent_white_bordered"
            android:drawableLeft="@drawable/ic_google"
            android:drawableStart="@drawable/ic_google"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_small"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login_do_not_have_an_account"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/extra_small"
            android:layout_marginStart="@dimen/extra_small"
            android:textColor="@android:color/white"
            android:text="@string/login_register_now"/>
    </LinearLayout>
</LinearLayout>
