<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context="com.weekendinc.jet.ProfileSettingActivity">

    <ProgressBar
        android:id="@+id/progress_bar_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <ScrollView
        android:id="@+id/sv_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/setting_profile_data"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_full_name"
                        android:maxLines="1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/setting_phone_number"
                        android:maxLines="1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_address"
                        android:maxLines="5"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_submit_change_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:background="@drawable/custom_bg_rounded_square_red_fill"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/setting_submit_change_profile"/>

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:background="@drawable/custom_bg_rounded_square_red_fill"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/setting_change_password"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
