<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/custom_bg_rounded_square_ios_bg_grey_fill">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium_large"
            android:textStyle="bold"
            android:text="@string/setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/setting_change_password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginLeft="@dimen/medium"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:orientation="vertical"
            android:background="@drawable/custom_bg_square_black">
            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/setting_change_password_current_password"/>
            <TextView
                android:id="@+id/tv_error_current_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textColor="@color/colorPrimary"
                android:text="@string/pod_required"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/setting_change_password_new_password"/>
            <TextView
                android:id="@+id/tv_error_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textColor="@color/colorPrimary"
                android:text="@string/pod_required"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>
            <EditText
                android:id="@+id/et_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/setting_change_password_confirm_new_password"/>
            <TextView
                android:id="@+id/tv_error_confirm_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textColor="@color/colorPrimary"
                android:text="@string/pod_required"
                android:visibility="gone"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/medium"
            android:background="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/medium"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorIOSTextLightBlue"
                android:textStyle="bold"
                android:text="@string/pod_courier_cancel"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"/>
            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/medium"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorIOSTextLightBlue"
                android:textStyle="bold"
                android:text="@string/setting_submit"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>